# OpenGL-Registry

./: meson.build  upstream.wrap
subprojects/: egl-registry.wrap
